# rooster

./: .env  .env.local.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY_DESIGN.md  README.cn.md  README.md  SECURITY.md  aria2_monitor.py  guardian.py  pyproject.toml  start.bat  start.command  test_agent_full.py  test_jiutian.py  test_search.py
.github/workflows/: ci.yml  release.yml
Rooster.app/Contents/: Info.plist
dashboard/: pyproject.toml
dashboard/src/: app.py  log_bridge.py  mount.py  ws.py
dashboard/src/routes/: config.py  mcp.py  memory.py  models.py  scheduler.py  skills.py  system.py
dashboard/ui/: package-lock.json  package.json  vite.config.js
dashboard/ui/src/: dashboard.html  index.html  test_steps_merge.html
dashboard/ui/src/css/: base.css
dashboard/ui/src/js/: dashboard-entry.js  i18n.js
dashboard/ui/src/partials/: mobile-nav.html  modals.html  navbar.html  sidebar.html  status-bar.html  tab-config.html  tab-downloader.html  tab-errors.html  tab-execution.html  tab-health.html  tab-logs.html  tab-memory.html  tab-metrics.html  tab-monitor.html  tab-scheduler.html  tab-security.html  tab-setup.html  tab-skills.html  tab-steps.html  tab-tools.html
docs/: 0.3.0history_react.md  PRD.md  SPEC.md  goal.md  history_TOOL_CONSOLIDATION_ROUND10.md  interaction_design.md  plan.md  stability_analysis.md  stability_overhaul.md  todo.md
scripts/: clean_session_magnets.py  daily_weather.py  run_agent.py  schedule_runner.py
skills/: _loader.py
skills/coding-agent/: SKILL.md
skills/data-analysis/: SKILL.md
skills/dev-tools/: SKILL.md
skills/email-139/: SKILL.md
skills/git-ops/: SKILL.md
skills/github/: SKILL.md
skills/pdf-tools/: SKILL.md
skills/resource-downloader/: SKILL.md
skills/self-improving/: SKILL.md
skills/summarize/: SKILL.md
skills/visual-control/: SKILL.md
skills/weather-query/: SKILL.md
skills/web-search/: SKILL.md
src/: analyze_skills.py  debug_glm_payload.json  launcher.py  main.py  model_role_mapping.json
src/agents/: auditor.py  executor.py  llm_client.py  mission_blackboard.py  mission_tactician.py  orchestrator.py  prompt_builder.py  protocol.py  reflection_engine.py  reframer.py  router.py  short_circuit.py  strategist.py  tool_dispatch.py
src/channels/: base.py  cli.py  feishu.py  registry.py  webhook.py
src/evolution/: engine.py  prompt_templates.py  soul_writer.py  triggers.py  user_writer.py
src/gateway/: auth.py  connection_manager.py  dashboard_ws.py  event_handler.py  local_node.py  log_bridge.py  metrics.py  protocol.py  router.py  run_manager.py  schemas.py  security.py  server.py  server_methods.py  stream.py
src/memory/: __init__.py  backends.py  chunker.py  compactor.py  dedup.py  distillation_scheduler.py  embeddings.py  indexer.py  manager.py  memory_compactor.py  migrate.py  models.py  semantic_search.py  session_index.py  soul_loader.py  visual_context.py  watcher.py
src/models/: anthropic_adapter.py  base.py  factory.py  openai_adapter.py  traffic.py  (+2 more)
tests/: conftest.py  test_anthropic_adapter.py  test_auth.py  test_config_routes.py  test_downloader_integration.py  test_executor.py  test_executor_fc_protocol.py  test_guardian_cron.py  test_llm_providers.py  test_privacy_router.py  test_replan_contrastive.py  test_router_triage.py  test_search_providers.py  test_security.py  test_session_title_fix.py  test_sessions_store.py  test_tool_dispatch.py  test_vision_cross_platform.py
(+96 files in other folders)
